[package]
name = "dmacro"
version = "0.1.9"
edition = "2021"
categories = ["macro", "debug", "log", "trace", "function-macro"]
description = "define C-like debug trace macro: enter!() and leave!()"
keywords = ["macro", "debug", "log", "trace", "function-macro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/church6/dmacro"

[lib]
name = "dmacro"

[dependencies]
chrono = "0.4.31"
